--- a/style.css
+++ b/style.css
@@ -3,8 +3,13 @@
    height: 400px;
    display: flex;
    flex-wrap: wrap;
+   background-color: palegoldenrod;
 }
 .grid div {
     width: 20px;
     height: 20px;
+}
+
+.tetromino {
+    background-color: purple;
 }
