--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
+body {
+    text-align: center;
+}
+
+#start-button {
+    margin-bottom: 50px;
+}
+
 #container {
     display: flex;
+    justify-content: center;
 }
 
 .grid {
