--- a/style.css
+++ b/style.css
@@ -18,9 +18,12 @@ body {
    flex-wrap: wrap;
    background-color: rgb(250, 250, 119);
 }
-.grid div {
-    width: 20px;
-    height: 20px;
+.grid div,
+.mini-grid div {
+    width: 18px;
+    height: 18px;
+    margin: 1px;
+    justify-content: space-between;
 }
 
 .mini-grid {
@@ -31,9 +34,4 @@ body {
     display: flex;
     flex-wrap: wrap;
     background-color: paleturquoise;
-}
-
-.mini-grid div {
-    width: 20px;
-    height: 20px;
 }
