--- a/style.css
+++ b/style.css
@@ -1,14 +1,41 @@
 body {
     text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-#start-button {
-    margin-bottom: 25px;
+.info-box {
+    background-color: rgb(252, 195, 225);
+    width: auto;
+    margin: auto 15px auto 0;
+    border: 1px solid gray;
+}
+
+h3 {
+    font-size: 20px;
+}
+
+li {
+    list-style: none;
+}
+
+.icon {
+    width: 20px;
+    margin: 0 3px -3px 0;
+}
+
+button {
+    width: 80%;
+    font-family: inherit;
 }
 
 #container {
     display: flex;
     justify-content: center;
+    background-color: rgb(230, 230, 230);
+    border: 3px ridge gray;
+    width: 500px;
+    margin: auto;
+    padding: 20px 10px;
 }
 
 .grid {
@@ -17,6 +44,7 @@ body {
    display: flex;
    flex-wrap: wrap;
    background-color: rgb(250, 250, 119);
+   border: 1px solid gray;
 }
 .grid div,
 .mini-grid div {
@@ -26,12 +54,22 @@ body {
     justify-content: space-between;
 }
 
+#display-label,
 .mini-grid {
-    margin-left: 15px;
-    padding: 20px 0;
     width: 100px;
-    height: 80px;
+    margin: 0 0 0 15px;
+    border: 1px solid gray;
+}
+
+#display-label {
+    background-color: rgb(152, 207, 207);
+}
+
+.mini-grid {
+    padding-top: 10px;
+    height: 100px;
     display: flex;
     flex-wrap: wrap;
     background-color: paleturquoise;
+    border-top: 0px;
 }
