--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-image: url(https://ak.picdn.net/shutterstock/videos/1024872992/thumb/1.jpg);
+    background-size: cover;
 }
 
 .info-box {
