--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@ body {
 
 .info-box {
     background-color: rgb(252, 195, 225);
-    width: auto;
+    width: 150px;
     margin: auto 15px auto 0;
     border: 1px solid gray;
 }
 
 #game-over {
     display: none;
-    padding: 15px;
+    padding: 15px 0 15px 45px;
 }
 
 h3 {
@@ -32,10 +32,13 @@ li {
 }
 
 button {
-    width: 80%;
+    width: 70%;
     font-family: inherit;
     padding: 10px 0;
     margin-bottom: 5px;
+    font-size: inherit;
+    border-width: 1px; 
+    border-radius: 5px;
 }
 
 #container {
