--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     background-image: url(https://ak.picdn.net/shutterstock/videos/1024872992/thumb/1.jpg);
     background-size: cover;
     background-attachment: fixed;
+    background-position: center;
 }
 
 .info-box {
@@ -44,6 +45,10 @@ button {
     font-size: inherit;
     border-width: 1px; 
     border-radius: 5px;
+}
+
+#alt-controls {
+    display: none;
 }
 
 #container {
@@ -115,5 +120,29 @@ button {
         width: 40%;
         padding: 0;
         margin-bottom: 0;
+    }
+}
+
+@media (max-width: 600px) {
+    #container {
+        display: grid;
+        grid-template-areas: 'left right';
+        grid-template-rows: 250px;
+        width: 400px;
+        padding: 10px 0 30px 0;
+    }
+    .info-box {
+        height: 150px;
+        width: 125px;
+    }
+    button {
+        width: 80%;
+    }
+    #controls {
+        display: none;
+    }
+    #alt-controls {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
     }
 }
